--- a/jaksim_ios/Member/MemberStoryboard.storyboard
+++ b/jaksim_ios/Member/MemberStoryboard.storyboard
@@ -314,7 +314,9 @@
                     </view>
                     <connections>
                         <outlet property="memberTableView" destination="lVz-mw-fFt" id="1Ht-zQ-3ai"/>
+                        <outlet property="percentLabel" destination="Ohm-4b-Kuc" id="aqB-xU-oV4"/>
                         <outlet property="tagCollectionView" destination="GdF-ZI-B6f" id="Jpg-sh-OWB"/>
+                        <outlet property="titleLabel" destination="pSg-fY-9wy" id="vq4-g5-GO7"/>
                         <outlet property="topImageView" destination="nQ9-dC-jAf" id="ziE-3y-hU4"/>
                     </connections>
                 </viewController>
@@ -331,54 +333,61 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nq9-Wn-fAi">
-                                <rect key="frame" x="67.5" y="380" width="279" height="136"/>
+                                <rect key="frame" x="67.5" y="382" width="279" height="132.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wnb-6W-eqH">
-                                        <rect key="frame" x="0.0" y="20" width="279" height="49"/>
+                                        <rect key="frame" x="0.0" y="20" width="279" height="48.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="응원하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FV-mq-RIX">
-                                                <rect key="frame" x="110" y="0.0" width="59" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="108.5" y="0.0" width="62.5" height="22"/>
+                                                <fontDescription key="fontDescription" name="Pretendard-SemiBold" family="Pretendard" pointSize="18"/>
                                                 <color key="textColor" red="0.25882352939999997" green="0.25882352939999997" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="응원을 보낼까요?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UhP-7g-DzC">
-                                                <rect key="frame" x="81.5" y="28.5" width="116" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="88.5" y="30" width="102" height="18.5"/>
+                                                <fontDescription key="fontDescription" name="Pretendard-Regular" family="Pretendard" pointSize="15"/>
                                                 <color key="textColor" red="0.25882352941176467" green="0.25882352941176467" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhr-2k-YRK">
-                                        <rect key="frame" x="0.0" y="85" width="279" height="1"/>
+                                        <rect key="frame" x="0.0" y="84.5" width="279" height="1"/>
                                         <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="DWl-fm-VbZ"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3T-VB-VmU">
-                                        <rect key="frame" x="0.0" y="86" width="279" height="50"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-3J-bU8">
+                                        <rect key="frame" x="139" y="84.5" width="1" height="48"/>
+                                        <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="KG0-kh-yYs"/>
+                                            <constraint firstAttribute="width" constant="1" id="UZb-l1-4Yf"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="y3T-VB-VmU">
+                                        <rect key="frame" x="0.0" y="85.5" width="279" height="47"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2tK-5T-DRy">
-                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="50"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2tK-5T-DRy">
+                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="47"/>
+                                                <fontDescription key="fontDescription" name="Pretendard-Regular" family="Pretendard" pointSize="18"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="취소">
+                                                    <color key="titleColor" name="AccentColor"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="cancleButtonAction:" destination="Xq8-ZH-yfv" eventType="touchUpInside" id="MfW-mQ-jdO"/>
                                                 </connections>
                                             </button>
-                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-3J-bU8">
-                                                <rect key="frame" x="139.5" y="0.0" width="1" height="50"/>
-                                                <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="1" id="UZb-l1-4Yf"/>
-                                                </constraints>
-                                            </view>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3S-Bi-2oK">
-                                                <rect key="frame" x="140.5" y="0.0" width="138.5" height="50"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="확인"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3S-Bi-2oK">
+                                                <rect key="frame" x="139.5" y="0.0" width="139.5" height="47"/>
+                                                <fontDescription key="fontDescription" name="Pretendard-SemiBold" family="Pretendard" pointSize="18"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title="확인">
+                                                    <color key="titleColor" name="AccentColor"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="okButtonAction:" destination="Xq8-ZH-yfv" eventType="touchUpInside" id="E5t-8l-6sR"/>
                                                 </connections>
@@ -389,10 +398,13 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="Wnb-6W-eqH" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="12h-CC-SeF"/>
+                                    <constraint firstAttribute="bottom" secondItem="gtr-3J-bU8" secondAttribute="bottom" id="5u7-sC-fDs"/>
                                     <constraint firstAttribute="trailing" secondItem="Wnb-6W-eqH" secondAttribute="trailing" id="8xM-Tm-JOt"/>
                                     <constraint firstItem="dhr-2k-YRK" firstAttribute="top" secondItem="Wnb-6W-eqH" secondAttribute="bottom" constant="16" id="As7-bS-aDC"/>
                                     <constraint firstAttribute="width" constant="279" id="QOY-T8-nSa"/>
                                     <constraint firstItem="dhr-2k-YRK" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="azi-jC-Py0"/>
+                                    <constraint firstItem="gtr-3J-bU8" firstAttribute="centerX" secondItem="nq9-Wn-fAi" secondAttribute="centerX" id="mPe-b4-8nK"/>
+                                    <constraint firstItem="gtr-3J-bU8" firstAttribute="top" secondItem="dhr-2k-YRK" secondAttribute="top" id="nDZ-BB-2WM"/>
                                     <constraint firstAttribute="bottom" secondItem="y3T-VB-VmU" secondAttribute="bottom" id="rCH-AB-vZw"/>
                                     <constraint firstAttribute="trailing" secondItem="dhr-2k-YRK" secondAttribute="trailing" id="sbD-Ai-19V"/>
                                     <constraint firstItem="y3T-VB-VmU" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="suh-K6-Box"/>
@@ -417,7 +429,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="osL-2d-bpx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="738" y="78"/>
+            <point key="canvasLocation" x="736" y="78"/>
         </scene>
     </scenes>
     <resources>
