--- a/jaksim_ios/Member/MemberStoryboard.storyboard
+++ b/jaksim_ios/Member/MemberStoryboard.storyboard
@@ -379,7 +379,7 @@
                                                 <fontDescription key="fontDescription" name="Pretendard-Regular" family="Pretendard" pointSize="18"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="취소">
-                                                    <color key="titleColor" name="AccentColor"/>
+                                                    <color key="titleColor" red="0.38039215686274508" green="0.38039215686274508" blue="0.38039215686274508" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="cancleButtonAction:" destination="Xq8-ZH-yfv" eventType="touchUpInside" id="MfW-mQ-jdO"/>
@@ -390,7 +390,7 @@
                                                 <fontDescription key="fontDescription" name="Pretendard-SemiBold" family="Pretendard" pointSize="18"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="확인">
-                                                    <color key="titleColor" name="AccentColor"/>
+                                                    <color key="titleColor" red="0.33333333333333331" green="0.47058823529411764" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="okButtonAction:" destination="Xq8-ZH-yfv" eventType="touchUpInside" id="E5t-8l-6sR"/>
